--- a/platform_deployment.yml
+++ b/platform_deployment.yml
@@ -2,5 +2,7 @@ version: 1.0.0
 services:
   - name: go-demo-4
     envs:
-      - go-demo-3-uat
-      - go-demo-3-prod
+      - name: go-demo-3-uat
+        addr: uat.go-demo-3.192.168.0.10.nip.io
+      - name: go-demo-3-prod
+        addr: go-demo-3.192.168.0.10.nip.io
