--- a/DeploymentKubernetesPod.yaml
+++ b/DeploymentKubernetesPod.yaml
@@ -19,3 +19,7 @@ spec:
     image: vfarcic/kubectl
     command: ["cat"]
     tty: true
+  - name: golang
+    image: golang:1.9
+    command: ["cat"]
+    tty: true
